<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.mdf.test.samir.presentation.features.home.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.mdf.test.samir.presentation.features.detail.DetailFragment"
        android:label="@string/detail_fragment_label"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="loan"
            app:argType="com.mdf.test.samir.domain.model.Loan" />
        <action
            android:id="@+id/action_detailFragment_to_documentFragment"
            app:destination="@id/documentFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/documentFragment"
        android:name="com.mdf.test.samir.presentation.features.document.DocumentFragment"
        android:label="@string/document_fragment_label"
        tools:layout="@layout/fragment_document">
        <argument
            android:name="url"
            app:argType="string" />
    </fragment>
</navigation>